--- a/src/components/Appbar/style.module.scss
+++ b/src/components/Appbar/style.module.scss
@@ -34,10 +34,10 @@
 
 .appbar__energy {
   padding-left: 15px !important;
-  background-color: #000000;
+  background-color: $black-color;
   padding: 5px;
   padding-top: 0;
-  width: 130px;
+  width: 200px;
 }
 
 .appbar__energy_content {
