--- a/src/pages/Friends/style.module.scss
+++ b/src/pages/Friends/style.module.scss
@@ -2,6 +2,7 @@
 
 .main {
   text-align: center;
+  position: relative;
 
   .img {
     width: 93px;
@@ -37,6 +38,7 @@
     max-height: 55dvh;
     overflow-y: auto;
     padding: 5px 3px;
+    padding-bottom: 80px;
 
     .user {
       position: relative;
@@ -67,8 +69,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 60px;
-    margin-bottom: 100px;
+    position: absolute;
+    width: 100%;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
 
     .invite_copy {
       background-color: $list-color;
