--- a/src/pages/Modes/Word/style.module.scss
+++ b/src/pages/Modes/Word/style.module.scss
@@ -68,6 +68,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        margin-left: auto;
         gap: 5px;
 
         .premium {
