--- a/src/styles/_varribles.scss
+++ b/src/styles/_varribles.scss
@@ -11,6 +11,7 @@ $bottom-bar-color: #212227;
 $bottom-bar-active-color: #1a1c21;
 $gold-color: #c67d01;
 $gold-black-color: #271e16;
+$gold-50-color: #3a3129;
 $btn-color: #3c3e47;
 $badge-color: #202020;
 $success-color: #6bb577;
