--- a/src/components/Appbar/style.module.scss
+++ b/src/components/Appbar/style.module.scss
@@ -8,97 +8,169 @@
   z-index: 999;
   display: flex;
   justify-content: space-between;
-}
 
-.appbar__balance {
-  padding: 8px 25px;
-  position: absolute;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  left: 50%;
-  top: 0;
-  transform: translateX(-50%);
-}
-
-.appbar__balance span {
-  color: $secondary-color;
-}
-
-.appbar__balance svg {
-  z-index: -1;
-  position: absolute;
-  left: 0;
-  top: -50%;
-}
-
-.appbar__energy {
-  padding-left: 15px !important;
-  background-color: $black-color;
-  padding: 5px;
-  padding-top: 0;
-  width: 200px;
-}
-
-.appbar__energy_content {
-  margin-top: 5px;
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  position: relative;
-}
-
-.appbar__energy_content h3 {
-  color: $white-color;
-}
-
-.appbar__energy_content h3 span {
-  color: $gray-color;
-}
-
-.appbar_energy_progress {
-  position: relative;
-  display: flex;
-  align-items: center;
-  width: 95px;
-  height: 7.5px;
-  padding: 0 1px;
-  border-radius: 20px;
-  background-color: #3f3f3f;
-}
-
-.appbar_energy_progress {
-  .status {
-    height: 6px;
-    width: 96%;
-    background-color: #dc994f;
-    border-radius: 20px;
-  }
-}
-
-.appbar_energy_progress {
-  .lines {
+  .settings {
     position: absolute;
-    overflow: hidden;
+    right: 5px;
+    top: 5px;
+    filter: drop-shadow(1px 1px $black-color);
+  }
+
+  .appbar__balance {
+    padding: 8px 25px;
+    position: absolute;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    top: 1px;
-    left: 1px;
-    height: 6px;
-    width: 98%;
+    gap: 8px;
+    left: 50%;
+    top: 0;
+    transform: translateX(-50%);
+
+    span {
+      color: $secondary-color;
+    }
+
+    svg {
+      z-index: -1;
+      position: absolute;
+      left: 0;
+      top: -50%;
+    }
+  }
+
+  .appbar__energy {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding-left: 15px !important;
+    background-color: $black-color;
+    padding: 5px;
+    padding-top: 0;
+    width: 200px;
+  }
+
+  .appbar__energy_content {
+    margin-top: 5px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    position: relative;
+
+    h3 {
+      color: $white-color;
+
+      span {
+        color: $gray-color;
+      }
+    }
+  }
+
+  .appbar_energy_progress {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 95px;
+    height: 7.5px;
+    padding: 0 1px;
     border-radius: 20px;
+    background-color: #3f3f3f;
+  }
+
+  .appbar_energy_progress {
+    .status {
+      height: 6px;
+      width: 96%;
+      background-color: #dc994f;
+      border-radius: 20px;
+    }
+  }
+
+  .appbar_energy_progress {
+    .lines {
+      position: absolute;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      top: 1px;
+      left: 1px;
+      height: 6px;
+      width: 98%;
+      border-radius: 20px;
+    }
+  }
+
+  .appbar_energy_progress {
+    .lines {
+      div {
+        background: linear-gradient(to top, #ffffff, #dddddd);
+        opacity: 0.1;
+        width: 2px;
+        height: 200%;
+        transform: rotate(50deg);
+      }
+    }
   }
 }
 
-.appbar_energy_progress {
-  .lines {
-    div {
-      background: linear-gradient(to top, #ffffff, #dddddd);
-      opacity: 0.1;
-      width: 2px;
-      height: 200%;
-      transform: rotate(50deg);
+.appSettings {
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  .settings_title {
+    font-size: 32px;
+  }
+
+  .settings_sound {
+    margin-top: 8px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+
+    p {
+      font-size: 24px;
+    }
+  }
+
+  .settings_premium {
+    text-align: center;
+    margin-top: 12px;
+    background-color: $list-color;
+    border-radius: 10px;
+    padding: 10px 18px;
+
+    p {
+      font-size: 20px;
+
+      span {
+        color: $gray-color;
+      }
+    }
+
+    .premium_btn {
+      position: relative;
+      color: $white-color;
+      display: flex;
+      gap: 4px;
+      align-items: center;
+      border-radius: 10px;
+      background: $gold-50-color;
+      font-size: 24px;
+      padding: 6px 12px;
+      margin: 10px 0;
+      
+     border: 1px solid $gold-color;
+    }
+
+    .hints{
+      margin-top: 4px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
     }
   }
 }
