--- a/src/pages/Modes/Word/Travel/style.module.scss
+++ b/src/pages/Modes/Word/Travel/style.module.scss
@@ -20,6 +20,13 @@
       }
     }
 
+    .mic {
+      z-index: 1;
+      position: absolute;
+      top: 10px;
+      right: 10px;
+    }
+
     .coin {
       position: absolute;
       bottom: 10px;
@@ -75,7 +82,7 @@
         }
 
         div {
-          transition: .3s ease;
+          transition: 0.3s ease;
           opacity: 0;
           visibility: hidden;
           position: absolute;
@@ -136,8 +143,208 @@
     }
   }
 
-  .next {
-    margin-left: auto;
-    margin-top: 5px;
+  .bottom_actions {
+    display: flex;
+    align-items: center;
+
+    .questions {
+      margin-left: auto;
+      display: flex;
+      align-items: center;
+      gap: 4px;
+
+      p {
+        font-size: 26px;
+      }
+
+      span {
+        color: $gray-color;
+      }
+    }
+
+    .next {
+      margin-left: auto;
+      margin-top: 5px;
+    }
+  }
+
+  .test_content {
+    margin-top: 30px;
+
+    .desc {
+      margin-top: 8px;
+      font-size: 24px;
+      color: $gray-color;
+    }
+
+    .question_score {
+      margin-top: 6px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 4px;
+      font-size: 32px;
+      color: $blue-color;
+    }
+
+    .conditions {
+      margin-top: 20px;
+
+      h5 {
+        font-size: 24px;
+      }
+
+      .badges {
+        margin-top: 8px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 6px;
+      }
+
+      .result {
+        padding: 10px;
+        border-radius: 5px;
+        transform: skew(-1deg);
+        border: 1px solid $list-border-color;
+        margin: 25px auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 6px;
+        background-color: $badge-color;
+        max-width: 205px;
+        width: 100%;
+
+        h5 {
+          font-size: 24px;
+        }
+
+        .result_info {
+          display: flex;
+          align-items: center;
+          gap: 6px;
+        }
+      }
+    }
+  }
+}
+
+.time {
+  background-color: $black-color;
+  padding: 5px;
+  left: 15px;
+  top: 38px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  position: fixed;
+  z-index: 99999;
+  font-size: 24px;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+
+.infoModal_content {
+  margin-top: 10px;
+
+  .answer_true,
+  .answer_false,
+  .true h5 {
+    max-width: 228px;
+    margin: 5px auto;
+    color: $black-color;
+    border-radius: 10px;
+    padding: 14px 10px;
+    font-size: 32px;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    justify-content: center;
+
+    span {
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+
+  .answer_true {
+    background-color: $success-color;
+  }
+
+  .answer_false {
+    background-color: $error-color;
+  }
+
+  .true {
+    display: flex;
+    align-items: center;
+
+    &.active h5 {
+      color: $white-color;
+      background-color: transparent;
+    }
+
+    h5 {
+      color: $black-color;
+      background-color: $success-color;
+      width: 100%;
+      padding: 8px;
+    }
+
+    img {
+      margin-left: -17px;
+    }
+  }
+
+  .transcription {
+    margin-top: 12px;
+
+    p {
+      font-size: 20px;
+      color: $gray-color;
+    }
+
+    h4 {
+      font-size: 32px;
+      margin-top: 4px;
+    }
+  }
+
+  .example {
+    margin-top: 12px;
+    background-color: $list-color;
+    border: 1px solid $list-border-color;
+    border-radius: 10px;
+    padding: 10px;
+
+    span {
+      color: $success-color;
+    }
+
+    .title {
+      font-size: 20px;
+      color: $gray-color;
+      margin-bottom: 8px;
+    }
+
+    .example_1 {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 4px;
+
+      p {
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 20px;
+        max-width: 200px;
+      }
+    }
+
+    .example_2 {
+      margin-top: 10px;
+      font-size: 20px;
+    }
   }
 }
