--- a/src/pages/Price/style.module.scss
+++ b/src/pages/Price/style.module.scss
@@ -113,18 +113,18 @@
     gap: 8px;
     margin-bottom: 18px;
 
-    &::before{
-        content: "";
-        position: absolute;
-        z-index: -1;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%,-50%);
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
-        background-color: $secondary-color;
-        filter: blur(50px);
+    &::before {
+      content: "";
+      position: absolute;
+      z-index: -1;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      background-color: $secondary-color;
+      filter: blur(50px);
     }
 
     h4 {
@@ -142,6 +142,47 @@
       span {
         color: $gray-color;
       }
+    }
+  }
+}
+
+.premium_required {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  p {
+    font-size: 28px;
+  }
+
+  .premium {
+    padding: 9px 12px;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    font-size: 24px;
+    border-radius: 10px;
+    background-color: $gold-50-color;
+    margin: 10px 0;
+    margin-bottom: 16px;
+  }
+
+  button {
+    overflow: hidden;
+    z-index: 1;
+
+    &::after {
+      content: "";
+      border-radius: 10px;
+      z-index: -1;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      width: calc(100% - 2px);
+      height: calc(100% - 2px);
+      background-color: $gold-50-color;
     }
   }
 }
